--- a/src/component/Resume/Resume.module.css
+++ b/src/component/Resume/Resume.module.css
@@ -9,7 +9,7 @@
 
  @media (max-width: 767px) {
     .resume__resumeList{
-        max-width: 768px;
+        max-width: 100%
     }
   }
   @media (max-width: 320px) {
