--- a/src/component/Resume/Resume.module.css
+++ b/src/component/Resume/Resume.module.css
@@ -1,27 +1,24 @@
-
-
 .resume__resumeList {
-    width: 1280px;
-    background-color: rgba(0, 0, 0, 0.719);
-    margin-top: 80px;
-    max-height: auto;
+  width: 1280px;
+  background-color: rgba(0, 0, 0, 0.719);
+  margin-top: 80px;
+  max-height: auto;
 }
 
- @media (max-width: 767px) {
-    .resume__resumeList{
-        max-width: 100%
-    }
+@media (max-width: 767px) {
+  .resume__resumeList {
+    max-width: 100%;
   }
-  @media (max-width: 320px) {
-    .resume__resumeList{
-        width: 320px;
-    }
-  } 
-  @media (min-width: 1280px) {
-   
-    .resume__container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+}
+@media (max-width: 320px) {
+  .resume__resumeList {
+    width: 320px;
   }
+}
+@media (min-width: 1280px) {
+  .resume__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
