--- a/src/component/Nav/Nav.module.css
+++ b/src/component/Nav/Nav.module.css
@@ -1,18 +1,18 @@
 @media (max-width: 767px) {
   .nav {
-  display: none; 
+    display: none;
   }
 }
 
 .nav__wrap {
-    display: inline-flex;
+  display: inline-flex;
 }
-.nav__text{
+.nav__text {
   position: relative;
 }
 .nav__text:not(:last-child) {
-margin-right: 20px;
-font-family: "Poppins", sans-serif;
+  margin-right: 20px;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.7);
@@ -20,10 +20,9 @@ font-family: "Poppins", sans-serif;
 
 .nav__link {
   color: rgba(255, 255, 255, 0.7);
-  
 }
 .nav__link::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 2px;
@@ -35,17 +34,20 @@ font-family: "Poppins", sans-serif;
   transition: all 0.3s ease-in-out 0s;
   z-index: 1000;
 }
- 
-.nav__link:hover,  .nav__text:hover > .nav__link::before, .nav__link:focus, .nav__link:hover:before{
- color: white;
- visibility: visible;
+
+.nav__link:hover,
+.nav__text:hover > .nav__link::before,
+.nav__link:focus,
+.nav__link:hover:before {
+  color: white;
+  visibility: visible;
   width: 25px;
-  transition: all 0.3s ease-in-out 0s; 
+  transition: all 0.3s ease-in-out 0s;
 }
 .nav__link_selected::before {
   color: white;
- visibility: visible;
- content: "";
+  visibility: visible;
+  content: '';
   position: absolute;
   width: 25px;
   height: 2px;
@@ -53,6 +55,3 @@ font-family: "Poppins", sans-serif;
   left: 0;
   background-color: #18d26e;
 }
-
-
-
