--- a/src/index.css
+++ b/src/index.css
@@ -8,16 +8,13 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url(./image/img/bg-fix.png);
-  /* background-position:  center; */
-background-size: cover; 
-background-repeat: no-repeat;
-/* height: 100vh; */
-/* min-height: 100vh; */
-max-width: 100%; 
+  background-size: cover;
+  background-repeat: no-repeat;
+  max-width: 100%;
 }
 
 code {
