--- a/src/utils/_variables.css
+++ b/src/utils/_variables.css
@@ -1,8 +1,7 @@
 :root {
-    --main-bg-color: #F2F5FC;
-    --white-color: #FFFFFF;
-    --black-text-color: #000000;
-    --main-text-color: #52555F;
-    --green-text-color: #407946;
-  
-  }
+  --main-bg-color: #f2f5fc;
+  --white-color: #ffffff;
+  --black-text-color: #000000;
+  --main-text-color: #52555f;
+  --green-text-color: #407946;
+}
