--- a/src/component/ContactList/ContactList.module.css
+++ b/src/component/ContactList/ContactList.module.css
@@ -29,19 +29,21 @@
 }
 
 .contact__info {
-  
   margin-bottom: 20px;
 }
-.contact__tel, .contact__social { 
+.contact__tel,
+.contact__social {
   display: flex;
   justify-content: baseline;
-background: rgba(255, 255, 255, 0.08);
-width: 100%;
-padding: 30px 50px;
-
+  background: rgba(255, 255, 255, 0.08);
+  width: 100%;
+  padding: 30px 50px;
+}
+.contact__tel:focus {
+  background: rgba(255, 255, 255, 0.08);
 }
 
-.contact__tel > div{ 
+.contact__tel > div {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -66,15 +68,10 @@ padding: 30px 50px;
 
 .contact__info > div > div > h3 {
   color: rgba(255, 255, 255, 0.5);
-
 }
 
-
-
-
-
-
-.form__input, .form__textarea {
+.form__input,
+.form__textarea {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
@@ -82,25 +79,20 @@ padding: 30px 50px;
   border: 0;
   transition: 0.3s;
   color: #fff;
-  
-
 }
 
 .form__input {
   padding: 10px 15px;
-
-} 
+}
 
 .form__textarea {
   padding: 12px 15px;
-  
 }
 
-.form__input:focus, .form__textarea:focus {
+.form__input:focus,
+.form__textarea:focus {
   background-color: rgba(255, 255, 255, 0.11);
-
 }
-
 
 .contact__text {
   /* font-style: italic; */
@@ -112,21 +104,20 @@ padding: 30px 50px;
 }
 .contact__form {
   background: rgba(255, 255, 255, 0.08);
-
 }
 
 .form__button {
-background: #18d26e;
-border: 0;
-padding: 10px 30px;
-color: #fff;
-transition: 0.4s;
-border-radius: 4px;
-margin-top: 20px;
-letter-spacing: 2px;
-width: fit-content;
-margin-left: auto;
-margin-right: auto;
+  background: #18d26e;
+  border: 0;
+  padding: 10px 30px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 4px;
+  margin-top: 20px;
+  letter-spacing: 2px;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 .form__button:hover {
   background: #15bb62;
@@ -148,12 +139,12 @@ margin-right: auto;
   }
 }
 
- @media (max-width: 767px) {
+@media (max-width: 767px) {
   .form {
     max-width: 1280px;
     display: flex;
-justify-content: center;
-flex-direction: column;
+    justify-content: center;
+    flex-direction: column;
   }
   .contact__form {
     padding: 30px;
@@ -162,41 +153,33 @@ flex-direction: column;
   .contact__social {
     margin-top: 20px;
   }
-  
+
   .form__input {
     width: 100%;
   }
   .form__input:last-child {
     margin-top: 20px;
   }
- 
 
-  .form__textarea{
-resize: none;
-width: 100%;
-height: 100px;
-margin-top: 20px;
+  .form__textarea {
+    resize: none;
+    width: 100%;
+    height: 100px;
+    margin-top: 20px;
   }
 
   .contact__container {
     padding: 30px;
   }
- 
-} 
-
-
-
+}
 
 @media (min-width: 768px) {
   .contact__info {
     display: flex;
-    
   }
-  .contact__tel{
+  .contact__tel {
+  }
 
-  } 
-
-  
   .contact__social {
     margin-left: 20px;
   }
@@ -204,14 +187,13 @@ margin-top: 20px;
   .form {
     max-width: 1280px;
     display: flex;
-justify-content: center;
-flex-direction: column;
+    justify-content: center;
+    flex-direction: column;
   }
 
   .form__row {
     display: flex;
     justify-content: space-around;
-    
   }
   .form__input {
     width: 100%;
@@ -219,16 +201,16 @@ flex-direction: column;
   .form__input:last-child {
     margin-left: 30px;
   }
- 
+
   .contact__form {
     padding: 50px;
   }
 
-  .form__textarea{
-resize: none;
-width: 100%;
-height: 100px;
-margin-top: 20px;
+  .form__textarea {
+    resize: none;
+    width: 100%;
+    height: 100px;
+    margin-top: 20px;
   }
 
   .contact__container {
